--- a/package.json
+++ b/package.json
@@ -6,8 +6,34 @@
   "repository": "https://github.com/EJMason/algorithm-speed-check-server.git",
   "author": "EJMason <eliotjunior@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "start": "nodemon dist/server.js",
+    "build-ts": "tsc"
+  },
   "dependencies": {
+    "body-parser": "^1.17.2",
+    "dotenv": "^4.0.0",
+    "express": "^4.15.3",
+    "winston": "^2.3.1"
+  },
+  "devDependencies": {
     "@types/express": "^4.0.36",
-    "express": "^4.15.3"
+    "gulp": "^3.9.1",
+    "gulp-typescript": "^3.2.1",
+    "gulp-util": "^3.0.8",
+    "husky": "^0.14.3",
+    "lint-staged": "^4.0.1",
+    "nodemon": "^1.11.0",
+    "prettier": "^1.5.3",
+    "run-sequence": "^2.0.0",
+    "tslint": "^5.5.0",
+    "tslint-config-prettier": "^1.1.0",
+    "typescript": "^2.4.1"
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": [
+      "prettier --parser typescript --print-width 100 --single-quote --jsx-bracket-same-line --write",
+      "git add"
+    ]
   }
 }
