--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@types/express": "^4.0.36",
     "gulp": "^3.9.1",
+    "gulp-run": "^1.7.1",
     "gulp-typescript": "^3.2.1",
     "gulp-util": "^3.0.8",
     "husky": "^0.14.3",
